<resources>
    <string name="app_name">孝颜</string>
    <string name="course">课程</string>
    <string name="activity">活动</string>
    <string name="video">视频</string>
    <string name="me">我</string>
    <string name="my_order">我的订单</string>
    <string name="my_activity">我的活动</string>
    <string name="circle_of_friends">朋友圈</string>
    <string name="notification">通知</string>
    <string name="service_team">服务队</string>
    <string name="chat">聊天</string>
    <string name="signed">已签</string>
    <string name="service_time">服务总时长</string>
    <string name="amount_of_jewel">宝石总数</string>
    <string name="money_of_xiaoyan">孝颜币</string>
    <string name="address_list">通讯录</string>
    <string name="new_friend">新的朋友</string>
    <string name="add_friend">添加好友</string>
    <string name="search_friend">查找好友</string>
    <string name="group">群组</string>
    <string name="search_hint">搜索用户昵称/手机号</string>
    <string name="yes">确定</string>
    <string name="head_image">头像</string>
    <string name="username">昵称</string>
    <string name="community">社区</string>
    <string name="real_name">真实姓名</string>
    <string name="xiaoyan_account">孝颜账号</string>
    <string name="my_qrcode">我的二维码</string>
    <string name="userinfo">个人信息</string>
    <string name="accepted">已同意</string>
    <string name="notification_setting">提醒设置</string>
    <string name="check_update">检查更新</string>
    <string name="change_password">修改密码</string>
    <string name="share_to_friend">分享给好友</string>
    <string name="log_out">退出登录</string>
    <string name="receive_new_notification">接收新消息通知</string>
    <string name="voice">语音</string>
    <string name="shake">震动</string>
    <string name="complete">完成</string>
    <string name="set_password">设置密码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_confirm_password">请确认密码</string>
    <string name="confirm_password">确认密码</string>
</resources>
