<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/gray"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_notification_setting"
        style="@style/ConfigItem"
        android:drawableLeft="@mipmap/ic_launcher"
        android:text="@string/notification_setting" />

    <TextView
        android:id="@+id/tv_check_update"
        style="@style/ConfigItem"
        android:drawableLeft="@mipmap/ic_launcher"
        android:text="@string/check_update" />

    <TextView
        android:id="@+id/tv_change_password"
        style="@style/ConfigItem"
        android:drawableLeft="@mipmap/ic_launcher"
        android:text="@string/change_password" />

    <TextView
        android:id="@+id/tv_share_to_friend"
        style="@style/ConfigItem"
        android:drawableLeft="@mipmap/ic_launcher"
        android:text="@string/share_to_friend" />

    <TextView
        android:id="@+id/tv_log_out"
        style="@style/ConfigItem"
        android:drawableLeft="@mipmap/ic_launcher"
        android:text="@string/log_out" />
</LinearLayout>