<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.baienda.xiaoyan.mvp.view.activity.UserInfoActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <ImageView
            android:id="@+id/iv_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tv_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/yes" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_head"
        style="@style/UserInfoItem">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/head_image" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/iv_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher" />
    </LinearLayout>

    <LinearLayout style="@style/UserInfoItem">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:maxLines="1"
            android:textAlignment="viewEnd"
            android:text="哈哈哈哈"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_community"
        style="@style/UserInfoItem">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/community" />

        <TextView
            android:id="@+id/tv_community"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="龙府花园社区"
            android:textAlignment="viewEnd" />
    </LinearLayout>

    <LinearLayout style="@style/UserInfoItem">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/real_name" />

        <EditText
            android:id="@+id/et_real_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:maxLines="1"
            android:text="郝亮"
            android:textAlignment="viewEnd" />
    </LinearLayout>

    <LinearLayout style="@style/UserInfoItem">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xiaoyan_account" />

        <TextView
            android:id="@+id/tv_xiaoyan_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="17600697395"
            android:textAlignment="viewEnd" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_my_qrcode"
        style="@style/UserInfoItem">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_qrcode" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher" />
    </LinearLayout>
</LinearLayout>
