<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="北京市" />

        <ImageView
            android:layout_width="wrap_content"
            android:id="@+id/iv_choose"
            android:src="@mipmap/icon_choose"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_city"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="标题"
            android:textSize="18sp" />
    </RelativeLayout>

    <include layout="@layout/divider_horizontal" />

    <FrameLayout
        android:id="@+id/fl_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <include layout="@layout/divider_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_course"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/tab_course" />

        <ImageView
            android:id="@+id/iv_activity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/tab_activity"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/iv_video"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/tab_video"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/iv_me"
            android:layout_width="0dp"
            android:src="@mipmap/tab_me"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/rg_bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_course"
            style="@style/BottomMenu"
            android:text="@string/course" />

        <RadioButton
            android:id="@+id/rb_activity"
            style="@style/BottomMenu"
            android:text="@string/activity" />

        <RadioButton
            android:id="@+id/rb_video"
            style="@style/BottomMenu"
            android:text="@string/video" />

        <RadioButton
            android:id="@+id/rb_me"
            style="@style/BottomMenu"
            android:text="@string/me" />
    </RadioGroup>
</LinearLayout>
